Order of read preference tags should not matter for query stats key

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • QI 2024-01-22, QI 2024-02-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We are seeing in the staging data that different orderings of read preference tags result in different entries in the query stats store. We should probably just sort the tags array to prevent this from happening.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: