SERVER-84529 Sort readPreference tags in query shapes (#18151)

GitOrigin-RevId: eb11610573963aafdd860bcb35e2ca3fee1d88a7