jstests/noPassthrough/queryStats/repl_set_query_stats_key.js
@@ -4,9 +4,15 @@
  * versioning are included for good measure.
  * @tags: [requires_fcv_71]
  */
-import {getLatestQueryStatsEntry, getQueryStats} from "jstests/libs/query_stats_utils.js";
+import {getLatestQueryStatsEntry} from "jstests/libs/query_stats_utils.js";
 
-const replTest = new ReplSetTest({name: 'reindexTest', nodes: 2});
+const replTest = new ReplSetTest({
+    name: 'queryStatsTest',
+    nodes: [
+        {rsConfig: {tags: {dc: "east"}}},
+        {rsConfig: {tags: {dc: "west"}}},
+    ]
+});
 
 // Turn on the collecting of query stats metrics.
 replTest.startSet({setParameter: {internalQueryStatsRateLimit: -1}});
@@ -41,7 +47,7 @@ let commandObj = {
     find: collName,
     filter: {v: {$eq: 2}},
     readConcern: {level: "local", afterClusterTime: new Timestamp(0, 1)},
-    $readPreference: {mode: "primary"},
+    $readPreference: {mode: "nearest", tags: [{some: "tag"}, {dc: "north pole"}, {dc: "east"}]},
     apiDeprecationErrors: false,
     apiVersion: "1",
     apiStrict: false,
@@ -51,10 +57,15 @@ assert.commandWorked(replSetConn.getDB(dbName).runCommand(commandObj));
 let stats = getLatestQueryStatsEntry(replSetConn, {collName: collName});
 delete stats.key["collectionType"];
 confirmCommandFieldsPresent(stats.key, commandObj);
-// check that readConcern afterClusterTime is normalized.
-assert.eq(stats.key.readConcern.afterClusterTime, "?timestamp", stats.key.readConcern);
+// Check that readConcern afterClusterTime is normalized.
+assert.eq(stats.key.readConcern.afterClusterTime, "?timestamp", tojson(stats.key.readConcern));
 
-// check that readPreference not populated and readConcern just has an afterClusterTime field.
+// Check that $readPreference.tags are sorted.
+assert.eq(stats.key.$readPreference.tags,
+          [{dc: "east"}, {dc: "north pole"}, {some: "tag"}],
+          tojson(stats.key.$readPreference));
+
+// Check that readConcern just has an afterClusterTime field.
 commandObj["readConcern"] = {
     afterClusterTime: new Timestamp(1, 0)
 };
@@ -66,7 +77,7 @@ delete stats.key["collectionType"];
 confirmCommandFieldsPresent(stats.key, commandObj);
 assert.eq(stats.key["readConcern"], {"afterClusterTime": "?timestamp"});
 
-// check that readConcern has no afterClusterTime and fields related to api usage are not present.
+// Check that readConcern has no afterClusterTime and fields related to api usage are not present.
 commandObj["readConcern"] = {
     level: "local"
 };
